--- a/index.html
+++ b/index.html
@@ -36,7 +36,43 @@
         </form>
     </div>
 </div>
-<div id="app"></div>
+
+
+<!--SEARCHING MOVIES SECTION WITH ADD BUTTON-->
+<div id="searchMovies">
+
+</div>
+
+
+
+<!--ADDED A HARDCODED VERSION OF OUR html CONST INTO THE HTML FOR THE PURPOSE OF THE BUTTONS AND EVENT LISTENERS-->
+<div id="favoriteWatchlist">
+    <div id="card" class="card-deck" style="margin: 4rem;">
+        <div class="card">
+            <img class="card-img-top" src="" alt="Movie Title">
+            <div class="card-body">
+                <h5 class="card-title">Title</h5>
+                <p class="director">Director</p>
+                <p class="rating">Rating</p>
+                <p class="genre">Genre</p>
+                <p class="plot">Plot</p>
+            </div>
+            <div class="card-footer">
+                <button type="button" id="edit">Edit</button>
+                <button type="button" id="delete">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
 <!-- jQUERY CDN -->
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
