Reconstructred the searchMovies function and renamed the variables one more time. Sorry Cas... :(

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 <div id="searchMovies">
 
     <!--ADD MOVIE BUTTON-->
-    <button type="button" id="addMovie">Add</button>
+    <button type="button" id="add" style="visibility: hidden">Add</button>
 
 </div>
 
 
 
-<!--ADDED A HARDCODED VERSION OF OUR html CONST INTO THE HTML FOR THE PURPOSE OF THE BUTTONS AND EVENT LISTENERS-->
-<div id="favoriteWatchlist">
+
+        <div id="favoriteWatchlist">
 
             <!--EDIT AND DELETE BUTTONS-->
             <div class="card-footer">
@@ -58,6 +58,8 @@
             </div>
 
         </div>
+
+
     </div>
 </div>
 
