the form input works. however, still cannot show the data on the HTML. I can render data on the console log

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <!--        </div>-->
 <!--    </div>-->
 
+
     <div class="search-container">
         <div class="search-body" id="searchContent">
             <h1>HBO-Minimum</h1>
@@ -54,6 +55,7 @@
 
 
             <!--HARDCODING FOR SHOWING PURPOSES FOR THE ADDED CLASS ON THE JS FILE-->
+            <!--BY DEFAULT YOU CAN SEE IT BUT ONCE YOU TYPE AND DELETE, IT TOGGLES THE CLASS-->
             <div class="card" id="cardSearchMovie">
                 <div class="cardBody">
                     <h3>Title</h3>
@@ -67,7 +69,7 @@
         </div>
     </div>
 
-
+<!--WE CAN DELETE WHEN WE STYLE-->
 <br>
 
     <div id="favoriteWatchlist">
